package com.lds.aluguel_carros.repository;

import org.springframework.stereotype.Repository;

import com.lds.aluguel_carros.entity.FuncionarioBanco;

@Repository
public interface FuncionarioBancoRepository extends IUsuarioRepository<FuncionarioBanco> {}
