@startuml DiagramaDePacotesMVC
left to right direction            

package "usuario" {
    package Model {
        class Usuario
        class Cliente
        class Agente
        class FuncionarioBanco
        class UsuarioRepository
        class ClienteRepository
        class AgenteRepository
        class FuncionarioBancoRepository
    }
    package View {
        class UsuarioDTO
        class ClienteDTO
        class AgenteDTO
        class FuncionarioBancoDTO
        class UsuarioMapper
        class ClienteMapper
        class AgenteMapper
        class FuncionarioBancoMapper
    }
    package Controller {
        class UsuarioController
        class ClienteController
        class AgenteController
        class FuncionarioBancoController
    }
}

package "aluguel" {
    package Model {
        class Aluguel
        class AluguelRepository
    }
    package View {
        class AluguelDTO
        class AluguelMapper
    }
    package Controller {
        class AluguelController
    }
}

package "automovel" {
    package Model {
        class Automovel
        class AutomovelRepository
    }
    package View {
        class AutomovelDTO
        class AutomovelMapper
    }
    package Controller {
        class AutomovelController
    }
}

package "contrato" {
    package Model {
        class ContratoAluguel
        class Credito
        class ContratoAluguelRepository
        class CreditoRepository
    }
    package View {
        class ContratoAluguelDTO
        class CreditoDTO
        class ContratoAluguelMapper
        class CreditoMapper
    }
    package Controller {
        class ContratoAluguelController
        class CreditoController
    }
}

package "rendimento" {
    package Model {
        class Rendimento
        class RendimentoRepository
    }
    package View {
        class RendimentoDTO
        class RendimentoMapper
    }
    package Controller {
        class RendimentoController
    }
}

usuario --> aluguel : Solicita >
aluguel --> automovel : Aluga >
aluguel --> contrato : Vincula >
contrato --> rendimento : Requere crédito >

@enduml
